--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -10,8 +10,8 @@
       <a mat-list-item routerLink="cities" routerLinkActive="active">{{'citiesModuleName' | translate}}</a>
       <mat-divider></mat-divider>
       <mat-action-list>
-        <button mat-list-item (click)="openPopup('pm10')">PM<div class="app-sub">10</div></button>
-        <button mat-list-item (click)="openPopup('pm25')">PM<div class="app-sub">25</div></button>
+        <button mat-list-item (click)="openPopup('pm10')">PM10</button>
+        <button mat-list-item (click)="openPopup('pm25')">PM2.5</button>
         <button mat-list-item (click)="openPopup('bc')">BC</button>
         <button mat-list-item (click)="openPopup('no2')">NO<div class="app-sub">2</div></button>
         <button mat-list-item (click)="openPopup('so2')">SO<div class="app-sub">2</div></button>
