bugfix - paddings on handset

--- a/src/app/components/cities/cities.component.scss
+++ b/src/app/components/cities/cities.component.scss
@@ -65,3 +65,38 @@
     flex: 1 1 100%;
   }
 }
+
+@media (max-width: 450px) {
+  .menu-container {
+    form {
+      .country-item {
+        padding-right: 0px;
+        flex: 1 1 50%;
+      }
+
+      .parameter-item {
+        padding-right: 0px;
+        flex: 1 1 50%;
+      }
+
+      .date-pickers {
+        flex-wrap: wrap;
+
+        .picker-from {
+          padding-right: 0px;
+          flex: 1 1 50%;
+        }
+  
+        .picker-to {
+          flex: 1 1 50%;
+        }
+      }
+
+      .go-button-item {
+        flex: 1 1 100%;
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
