--- a/src/app/components/cities/cities.component.scss
+++ b/src/app/components/cities/cities.component.scss
@@ -61,6 +61,13 @@
   display: flex;
   flex-direction: column;
 
+  .units {
+    margin: 5px;
+    align-self: flex-end;
+    color: grey;
+    font-size: 60%;
+  }
+
   table {
     flex: 1 1 100%;
   }
