--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="grid-container">
-    <p class="units" *ngIf="latestPollutionGridDataSource.length > 0">{{'unitsMessage' | translate}} μg/m<sup>3</sup></p>
+    <p class="units" *ngIf="archiveView === false && latestPollutionGridDataSource.length > 0">{{'unitsMessage' | translate}} μg/m<sup>3</sup></p>
     <table  *ngIf="archiveView === false && latestPollutionGridDataSource.length > 0" mat-table [dataSource]="latestPollutionGridDataSource" matSort matSortDisabled  class="mat-elevation-z8">
       <ng-container matColumnDef="{{dateColumn}}">
         <th mat-header-cell *matHeaderCellDef> {{'date' | translate}} </th>
